--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,38 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>webjars-locator</artifactId>
+                    <version>0.36</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>bootstrap</artifactId>
+                    <version>4.3.1</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars.bower</groupId>
+                    <artifactId>open-iconic</artifactId>
+                    <version>1.1.1</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>jquery</artifactId>
+                    <version>3.3.1-2</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars.bower</groupId>
+                    <artifactId>jquery-mask-plugin</artifactId>
+                    <version>1.14.15</version>
+                </dependency>
+                
+                
 	</dependencies>
 
 	<build>
