--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+#MySQL
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/pontointeligente?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=master
 
+#Exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
+# Flyway
+spring.flyway.baseline-on-migrate=true
