--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         </dependency>
                 
                 
-        <!-- JPA, MySQL and H2 -->
+        <!-- JPA, MySQL and H2 NEWER-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
