--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #MySQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/pontointeligente?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/demoMVC?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=master
 
@@ -11,4 +11,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
 # Flyway
-spring.flyway.baseline-on-migrate=true
+#spring.flyway.baseline-on-migrate=true
