--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 #MySQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/demoMVC?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_mvc?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=master
+
+#JPA
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql= true
+spring.jpa.open-in-view= true
 
 #Exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
+
+
 
 # Flyway
 #spring.flyway.baseline-on-migrate=true
