--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,12 @@
             <artifactId>jquery-mask-plugin</artifactId>
             <version>1.14.15</version>
         </dependency>
-                
-                
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jandex</artifactId>
+            <version>2.0.5.Final</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
