--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
 spring.jpa.open-in-view= true
 
+# THYMELEAF (t=ThymeleafAutoConfiguration)
+spring.thymeleaf.cache= false 
+
 #Exibe os comandos SQL
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
